- Updated rewards for Proof of Demise and Timear Foresees quests.
- Updated Map names for AlphaMap 3.75.
- Updates to localizations: ruRU, znTW. 

- Fixes:
	- Corrected typo in LBRS: Kibler's Exotic Pets  (thanks gothic251)
	- Clarified what Grime-Encrusted Ring drops from in Gnomeregan.  (thanks gothic251)
	- Prequest added for Utgarde Keep: A Score to Settle (Horde)  (thanks tailslee)


	
Version 4.3.4

- Updated boss numbers for Atlas 1.14.1.
- Small updates and tweaks to a number of quests thanks to info provided by nonameform.
- Localizations updated.

- Quests added:
	- Molten Core: Scrying Goggles? No Problem! (thanks nonameform)
	- Gnomeregan: The Sparklematic 5200! (thanks b@k$$ and nonameform)
	- Scholomance: The Right Piece of Lord Valthalak's Amulet (thanks nonameform)
	- Stratholme: True Masters of the Light (Horde Paladin) (thanks nonameform)
	- Ulduar: Archivum Data Disc (thanks Celellach)
	- Ulduar: The Celestial Planetarium (thanks Celellach)
	- Ulduar: Hodir's Sigil (thanks Celellach)
	- Ulduar: Thorim's Sigil (thanks Celellach)
	- Ulduar: Freya's Sigil (thanks Celellach)
	- Ulduar: Mimiron's Sigil (thanks Celellach)
	- Ulduar: Algalon (thanks Celellach)
	- Ulduar: All Is Well That Ends Well (thanks Celellach)
	- Ulduar: Heroic: Archivum Data Disc (thanks Celellach)
	- Ulduar: Heroic: The Celestial Planetarium (thanks Celellach)
	- Ulduar: Heroic: Hodir's Sigil (thanks Celellach)
	- Ulduar: Heroic: Thorim's Sigil (thanks Celellach)
	- Ulduar: Heroic: Freya's Sigil (thanks Celellach)
	- Ulduar: Heroic: Mimiron's Sigil (thanks Celellach)
	- Ulduar: Heroic: Algalon (thanks Celellach)
	- Ulduar: Heroic: All Is Well That Ends Well (thanks Celellach)



Version 4.3.3

- TOC updated for Patch 3.1
- Russian, Simplified Chinese and Traditional Chinese localizations updated.
- Updated boss numbers for Atlas 1.14.
- Support for Ulduar added. No quests known yet.
- Added clarification to Stratholme: Aurius' Reckoning.